cmake_minimum_required(VERSION 3.24)
project(Data_Structures_Soydan_Serttas)

set(CMAKE_CXX_STANDARD 23)



add_executable(Hafta_6_1 Hafta_6_1.cpp)
add_executable(Hafta_7 Hafta_7.cpp)
add_executable(Hafta_6_2 Hafta_6_2.cpp)
add_executable(boskod_1 boskod_1.cpp)
add_executable(boskod_5 boskod_5.cpp)
add_executable(boskod_4 boskod_4.cpp)
add_executable(boskod_3 boskod_3.cpp)
add_executable(boskod_2 boskod_2.cpp)